js/src/tests/test262/staging/sm/Error/constructor-ordering.js
var
order
=
0
;
function
assertOrdering
(
ordering
)
{
assert
.
sameValue
(
order
ordering
)
;
order
+
+
;
}
var
handler
=
{
get
(
)
{
assertOrdering
(
0
)
;
return
Error
.
prototype
}
}
;
var
errorProxy
=
new
Proxy
(
Error
handler
)
;
var
toStringable
=
{
toString
(
)
{
assertOrdering
(
1
)
;
return
"
Argument
"
;
}
}
;
new
errorProxy
(
toStringable
)
;
reportCompare
(
0
0
)
;
